3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove unused parameter from fatal_signal(), make signal handlers static.
 include/sproto.h
 server/init.c
Nicolas Weeger 2007-08-05

Remove unused loading field.
 include/player.h
 server/c_wiz.c server.c
Nicolas Weeger 2007-08-05

include/newserver.h: fix documentation.
Nicolas Weeger 2007-08-05

Documentation, no functional change.
 Doxyfile
 common/living.c map.c object.c
 doc/Developers/mainpage.dox
 include/artifact.h attack.h commands.h config.h define.h face.h global.h god.h
  image.h includes.h living.h loader.h logger.h map.h material.h newclient.h object.h
  skills.h spells.h
 random_maps/random_map.h room_gen_onion.c room_gen_spiral.c special.c treasure.c
 test/unit/server/check_c_object.c
 server/apply.c attack.c c_chat.c c_object.c shop.c
Nicolas Weeger 2007-08-05

Documentation, no functional change.
 include/newclient.h newserver.h ob_methods.h ob_types.h object.h path.h player.h
  plugin.h re-cmp.h recipe.h shstr.h skills.h sounds.h spellist.h spells.h
  tod.h treasure.h win32.h
 server/skill_util.c spell_util.c time.c weather.c win32.c
Nicolas Weeger 2007-08-04

Documentation, no functional change.
 common/shstr.c
 include/race.h
 server/commands.c daemon.c hiscore.c init.c login.c main.c server.c
Nicolas Weeger 2007-08-03

Fix compilation, document compile command line.
 utils/mapper.c
Nicolas Weeger 2007-07-31

Move read_client_images() from socket/ to common/.
 common/image.c
 include/image.h libproto.h sockproto.h
 socket/image.c
Nicolas Weeger 2007-07-31

Documentation, no functional change.
 server/apply.c c_chat.c c_object.c c_party.c c_range.c ob_methods.c ob_types.c
  player.c resurrection.c